<resources>
    <string name="app_name">QChat</string>
    <string name="welcome_msg">Welcome to QChat</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_an_one_time_password_on_this_mobile_number">We Will Send an One Time Password on this mobile number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_91">+91-</string>
    <string name="_1234567890">1234567890</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_the_otp_send_to">Enter the OTP Send to</string>
    <string name="didn_t_receive_the_otp">Didn`t receive The OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">Verify</string>
    <string name="remaining">Remaining :- </string>
    <string name="resend_otp_new">RESEND OTP</string>
    <string name="create_profile">Create Profile</string>
    <string name="add_image">Add Image</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="update">UPDATE</string>
    <string name="select_user">Select User</string>
    <string name="allow_contact_permission">Allow Contact Permission</string>
    <string name="new_update_is_available">New Update is Available</string>
    <string name="new_version_v1_5">New Version: v1.0</string>
    <string name="updated_on_16_10_2018">Updated On: 01/02/2023</string>
    <string name="what_s_new">What\'s New?</string>
    <string name="forceUpdateNote">Note: In order to continue using the app, you must have to update it to the latest version.</string>
    <string name="later">LATER</string>
    <string name="whats_new">• Bug Fixed\n• New Layout\n• Improved User Interface\n• Reduced App Size\n• Added More Ways to Earn</string>
    <string name="message">Message</string>
    <string name="online">Online</string>
    <string name="typing">Typing…</string>
</resources>